// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MeetingHeader Component Basic Rendering should match snapshot without props 1`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
        "elevation": 1,
        "marginBottom": 16,
        "marginTop": 16,
        "padding": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
        "marginBottom": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#DBEAFE",
          "borderRadius": 12,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        }
      }
    >
      <Ionicons
        color="#3B82F6"
        name="calendar-outline"
        size={20}
      />
    </View>
    <Text
      style={
        [
          {
            "fontSize": 18,
            "fontWeight": "700",
          },
          {
            "color": "#1A2520",
          },
        ]
      }
    >
      Schedule Meeting
    </Text>
  </View>
</View>
`;

exports[`MeetingHeader Component Combined Display should match snapshot with both props 1`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
        "elevation": 1,
        "marginBottom": 16,
        "marginTop": 16,
        "padding": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
        "marginBottom": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#DBEAFE",
          "borderRadius": 12,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        }
      }
    >
      <Ionicons
        color="#3B82F6"
        name="calendar-outline"
        size={20}
      />
    </View>
    <Text
      style={
        [
          {
            "fontSize": 18,
            "fontWeight": "700",
          },
          {
            "color": "#1A2520",
          },
        ]
      }
    >
      Schedule Meeting
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginBottom": 4,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "height": 28,
            "justifyContent": "center",
            "width": 28,
          },
          {
            "backgroundColor": "#E9F1EB",
          },
        ]
      }
    >
      <Ionicons
        color="#4A5751"
        name="person-outline"
        size={14}
      />
    </View>
    <Text
      style={
        [
          {
            "fontSize": 14,
          },
          {
            "color": "#4A5751",
          },
        ]
      }
    >
      With: 
      John
       
      Smith
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginBottom": 4,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "height": 28,
            "justifyContent": "center",
            "width": 28,
          },
          {
            "backgroundColor": "#E9F1EB",
          },
        ]
      }
    >
      <Ionicons
        color="#4A5751"
        name="briefcase-outline"
        size={14}
      />
    </View>
    <Text
      style={
        [
          {
            "fontSize": 14,
          },
          {
            "color": "#4A5751",
          },
        ]
      }
    >
      Job: 
      Kitchen Renovation
    </Text>
  </View>
</View>
`;

exports[`MeetingHeader Component Contractor Display should match snapshot with contractor 1`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
        "elevation": 1,
        "marginBottom": 16,
        "marginTop": 16,
        "padding": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
        "marginBottom": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#DBEAFE",
          "borderRadius": 12,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        }
      }
    >
      <Ionicons
        color="#3B82F6"
        name="calendar-outline"
        size={20}
      />
    </View>
    <Text
      style={
        [
          {
            "fontSize": 18,
            "fontWeight": "700",
          },
          {
            "color": "#1A2520",
          },
        ]
      }
    >
      Schedule Meeting
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginBottom": 4,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "height": 28,
            "justifyContent": "center",
            "width": 28,
          },
          {
            "backgroundColor": "#E9F1EB",
          },
        ]
      }
    >
      <Ionicons
        color="#4A5751"
        name="person-outline"
        size={14}
      />
    </View>
    <Text
      style={
        [
          {
            "fontSize": 14,
          },
          {
            "color": "#4A5751",
          },
        ]
      }
    >
      With: 
      John
       
      Smith
    </Text>
  </View>
</View>
`;

exports[`MeetingHeader Component Job Display should match snapshot with job 1`] = `
<View
  style={
    [
      {
        "borderRadius": 16,
        "elevation": 1,
        "marginBottom": 16,
        "marginTop": 16,
        "padding": 16,
        "shadowColor": "#1F2A24",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 10,
        "marginBottom": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#DBEAFE",
          "borderRadius": 12,
          "height": 40,
          "justifyContent": "center",
          "width": 40,
        }
      }
    >
      <Ionicons
        color="#3B82F6"
        name="calendar-outline"
        size={20}
      />
    </View>
    <Text
      style={
        [
          {
            "fontSize": 18,
            "fontWeight": "700",
          },
          {
            "color": "#1A2520",
          },
        ]
      }
    >
      Schedule Meeting
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginBottom": 4,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 8,
            "height": 28,
            "justifyContent": "center",
            "width": 28,
          },
          {
            "backgroundColor": "#E9F1EB",
          },
        ]
      }
    >
      <Ionicons
        color="#4A5751"
        name="briefcase-outline"
        size={14}
      />
    </View>
    <Text
      style={
        [
          {
            "fontSize": 14,
          },
          {
            "color": "#4A5751",
          },
        ]
      }
    >
      Job: 
      Kitchen Renovation
    </Text>
  </View>
</View>
`;
